Added group project to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ section p {
     flex-grow: 1;
     margin: 16px 0px 0px 8px;
     height: 150px;
-    background-image: url("../images/Code.png");
+    background-image: url("../images/Shellter.png");
 }
 
 .project-lable {
